[gd_scene load_steps=15 format=2]

[ext_resource path="res://drawncutscenes/capture3.png" type="Texture" id=1]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=2]
[ext_resource path="res://drawncutscenes/capture4.png" type="Texture" id=3]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://drawncutscenes/capture2.gd" type="Script" id=5]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=6]
[ext_resource path="res://drawncutscenes/capture2sound.gd" type="Script" id=7]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=8]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=9]
[ext_resource path="res://sprites/UI/continuesprite.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2450, -0.25, 0, 0.25, 0, 2450, -0.25, 0, 0.25, 0, 2450, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 340, -0.25, 0, 0.25, 0, 430, -0.25, 0, 0.25, 0, 340, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="Animation" id=4]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2450, -0.25, 0, 0.25, 0, 2450, -0.25, 0, 0.25, 0, 2450, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 340, -0.25, 0, 0.25, 0, 430, -0.25, 0, 0.25, 0, 340, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2030.2, 923.344 )
scale = Vector2( 1.08693, 1.15963 )
frames = SubResource( 1 )
playing = true

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 2024.83, 601.594 )
scale = Vector2( 2.07225, 1.25363 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="Control"]
position = Vector2( 2024.83, 601.594 )
scale = Vector2( 2.07225, 1.25363 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 16.7
anchor_top = 41.2
anchor_right = 82.775
anchor_bottom = 47.325
margin_left = 32.8226
margin_top = -1244.84
margin_right = 39.8228
margin_bottom = -1090.84
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
anchor_left = 16.7
anchor_top = 41.2
anchor_right = 82.775
anchor_bottom = 47.325
margin_left = 32.8226
margin_top = -1244.84
margin_right = 39.8228
margin_bottom = -1090.84
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control"]

[node name="continuesprite" type="Sprite" parent="Control"]
position = Vector2( 2450, 340 )
scale = Vector2( 1.432, 2.056 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 3 )

[node name="continuesprite2" type="Sprite" parent="Control"]
position = Vector2( 2450, 340 )
scale = Vector2( 1.432, 2.056 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/continuesprite2"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 4 )

[connection signal="tree_exited" from="Control" to="Control" method="_on_Control_tree_exited"]
[connection signal="tween_completed" from="Control/Tween" to="Control" method="_on_Tween_tween_completed"]
